--- a/src/components/experience/experience.css
+++ b/src/components/experience/experience.css
@@ -24,6 +24,8 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   row-gap: 2rem;
+  column-gap: 2rem;
+
 }
 .experience__details {
   display: flex;
