--- a/src/components/Services/services.css
+++ b/src/components/Services/services.css
@@ -1,13 +1,13 @@
 .services__container {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: 1fr 1fr;
   gap: 3rem;
 }
 .service {
   background: var(--color-bg-variant);
   border-radius: 0 0 2rem 2rem;
   border: 1px solid var(--color-primary);
-  height: fit-content;
+  /* height: fit-content; */
   transition: var(--transition);
 }
 .service:hover {
@@ -40,7 +40,6 @@
   color: var(--color-primary);
   width: 40px;
   font-size: 1.8rem;
-
 }
 .service__list p {
   font-size: 0.8rem;
@@ -60,6 +59,5 @@
     grid-template-columns: 1fr;
     gap: 2rem;
     height: auto;
-
   }
 }
