--- a/src/components/experience/experience.css
+++ b/src/components/experience/experience.css
@@ -1,13 +1,14 @@
 .experience__container {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  gap: 2rem;
+  gap: 3rem;
 }
 .experience__container > div {
   background: var(--color-bg-variant);
   padding: 2.4rem 5rem;
   border-radius: 2rem;
   border: 1px solid transparent;
+  transition: var(--transition);
 }
 .experience__container > div:hover {
   background: transparent;
@@ -25,7 +26,6 @@
   grid-template-columns: 1fr 1fr;
   row-gap: 2rem;
   column-gap: 2rem;
-
 }
 .experience__details {
   display: flex;
@@ -36,47 +36,30 @@
   color: var(--color-primary);
 }
 
+@media screen and (max-width: 1024px) {
+  .experience__container {
+    grid-template-columns: 1fr;
+  }
 
-  @media screen and (max-width: 1024px) {
+  .experience__container > div {
+    width: 80%;
 
-    .experience__container{
+    padding: 2rem;
 
-      grid-template-columns: 1fr;
+    margin: 0 auto;
+  }
 
-    }
+  .experience__content {
+    padding: 1rem;
+  }
+}
 
-    .experience__container >div {
+@media screen and (max-width: 600px) {
+  .experience__container > div {
+    width: 100%;
 
-      width: 80%;
+    padding: 2rem 1rem;
 
-      padding: 2rem;
-
-      margin: 0 auto;
-
-    }
-
-    .experience__content{
-
-      padding: 1rem;
-
-    }
-
-    }  
-
-
-
-    @media screen and (max-width: 600px) {
-
-      .experience__container >div {
-
-        width: 100%;
-
-        padding: 2rem 1rem;
-
-        margin: 0 auto;
-
-      }
-
-    }
-
-
+    margin: 0 auto;
+  }
+}
