--- a/src/index.css
+++ b/src/index.css
@@ -12,17 +12,22 @@
   text-decoration: none;
 }
 :root {
-  --color-bg: #1f1f38;
-  --color-bg-variant: #2c2c6c;
-  --color-primary: #4db5ff;
-  --color-primary-variant: rgba(77, 181, 255, 0.4);
-  --color-white: #fff;
-  --color-light: rgba(255, 255, 255, 0.6);
+  --color-bg: #120f1d;
+--color-bg-variant: #201447;
+--color-primary: #4db5ff;
+--color-primary-variant: rgba(77, 181, 255, 0.4);
+/* --color-bg: #1f1f38;
+--color-bg-variant: #2c2c6c;
+--color-primary: #4db5ff;
+--color-primary-variant: rgba(77, 181, 255, 0.4); */
 
-  --container-width-lg: 75%;
-  --container-width-md: 86%;
-  --container-width-sm: 90%;
-  --transition: 0.5s;
+--color-white: #fff;
+--color-light: rgba(255, 255, 255, 0.6);
+
+--container-width-lg: 75%;
+--container-width-md: 86%;
+--container-width-sm: 90%;
+--transition: 0.5s;
 }
 html {
   scroll-behavior: smooth;
