--- a/src/components/experience/experience.css
+++ b/src/components/experience/experience.css
@@ -2,6 +2,7 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 3rem;
+  
 }
 .experience__container > div {
   background: var(--color-bg-variant);
@@ -61,5 +62,12 @@
     padding: 2rem 1rem;
 
     margin: 0 auto;
+  }
+  
+  .experience__content {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    row-gap: 1rem;
+    column-gap: 1rem;
   }
 }
