--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -39,7 +39,7 @@ footer a {
 }
 .footer__socials a:hover {
   background: transparent;
-  color: var(--color-bg);
+  color: var(--color-white);
   border-color: var(--color-bg);
 }
 .footer__copyright {
