--- a/src/index.css
+++ b/src/index.css
@@ -28,6 +28,18 @@
 --container-width-md: 86%;
 --container-width-sm: 90%;
 --transition: 0.5s;
+--color-bg: #1f1f38;
+--color-1: #833dec;
+--color-4: #975cf0;
+--color-2: #dcc2ff;
+--color-3: #ff37ffb5;
+--color-white: #fff;
+--color-light: rgba(255, 255, 255, 0.6);
+--color-gray: #999;
+--color-dark: #000;
+--shadow: 0px 13px 13px rgba(0, 0, 0, 0.6);
+
+--transition: all 400ms ease;
 }
 html {
   scroll-behavior: smooth;
